--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "type": "shell",
       "label": "Build",
-      "command": "${workspaceFolder}/build.bat",
+      "command": "zig build",
       "options": {
         "cwd": "${workspaceFolder}"
       },
